# mirage_rpc

./: .gitignore  CMakeLists.txt  README.md
cmake/: project_cpp_standard.cmake  retrieve_files.cmake
src/: empty.cpp  mirage_rpc_client.h  mirage_rpc_server.cpp  mirage_rpc_server.h
